--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
 		"32": "icon32.png",
 		"48": "icon48.png",
 		"128": "icon128.png" },
+	"browser_action": {
+		"default_icon": "icon32.png",
+		"default_title": "AdSweep",
+		"popup": "popup.html"
+	},
 	"background_page": "bg.html",
 	"options_page": "options.html",
 	"permissions": [
