--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "AdSweep",
-	"version": "2.0.7",
-	"description": "An online ad-removal tool for your favorite web browser.",
+	"version": "2.0.8",
+	"description": "__MSG_extDesc__",
 	"icons": { "16": "icon16.png",
 		"32": "icon32.png",
 		"48": "icon48.png",
@@ -15,5 +15,6 @@
 	"permissions": [
 		"http://*/*",
 		"tabs"
-	]
+	],
+	"default_locale" : "en"
 }
