--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 		"48": "icons/icon48.png",
 		"128": "icons/icon128.png" },
 	"browser_action": {
-		"default_icons": "icons/icon32.png",
+		"default_icon": "icons/icon32.png",
 		"default_title": "AdSweep",
 		"popup": "popup.html"
 	},
